--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
         "scripting"
     ],
     "background": {
-        "service_worker": "background.js"
-    }
+        "service_worker": "scripts/background.js"
+    },
+ "icons": {
+    "16": "icons/16.16.png",
+    "32": "icons/32.32.png",
+    "48": "icons/48.48.png",
+    "128": "icons/128.128.png"
+  }
 }
